Update storageClass for persistentVolume in argocd/vm-single.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/vm-single.yaml
+++ b/argocd/vm-single.yaml
@@ -24,6 +24,9 @@ spec:
             - secretName: vm-k8s-home-lex-la-tls
               hosts:
                 - vm.k8s.home.lex.la
+        server:
+          persistentVolume:
+            storageClass: "longhorn"
   project: default
   syncPolicy:
     automated:
