Update ingress configuration in argocd/vm-single.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/vm-single.yaml
+++ b/argocd/vm-single.yaml
@@ -19,7 +19,9 @@ spec:
           ingress:
             enabled: true
             hosts:
-              - vm.k8s.home.lex.la
+              - name: vm.k8s.home.lex.la
+                path: /
+                port: http
             annotations:
               traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
               cert-manager.io/cluster-issuer: "cloudflare-issuer"
