Update persistence configuration in argocd/longhorn.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/longhorn.yaml
+++ b/argocd/longhorn.yaml
@@ -13,6 +13,8 @@ spec:
     chart: longhorn
     helm:
       valuesObject:
+        persistence:
+          defaultClassReplicaCount: 1
         ingress:
           enabled: true
           host: longhorn.k8s.home.lex.la
