--- a/argocd/coredns.yaml
+++ b/argocd/coredns.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: coredns
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: kube-system
@@ -49,6 +51,7 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
