--- a/argocd/vm-single.yaml
+++ b/argocd/vm-single.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: vm-single
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: monitoring
@@ -112,6 +114,7 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
