--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: argocd
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: argocd
@@ -51,4 +53,5 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
