--- a/argocd/cloudflared.yaml
+++ b/argocd/cloudflared.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: cloudflared
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: cloudflared-system
@@ -23,6 +25,7 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
