--- a/argocd/nfd.yaml
+++ b/argocd/nfd.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: node-feature-discovery
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: node-feature-discovery
@@ -14,6 +16,7 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
