--- a/argocd/tor-controller.yaml
+++ b/argocd/tor-controller.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: tor-controller
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: tor-controller
@@ -14,6 +16,7 @@ spec:
   project: default
   syncPolicy:
     automated:
+      prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
