Update Argo CD configuration to include additional sources for Metallb
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/metallb.yaml
+++ b/argocd/metallb.yaml
@@ -9,10 +9,13 @@ spec:
   destination:
     namespace: metallb-system
     server: "https://kubernetes.default.svc"
-  source:
-    repoURL: "https://metallb.github.io/metallb"
-    targetRevision: "0.14.4"
-    chart: metallb
+  sources:
+    - repoURL: "https://metallb.github.io/metallb"
+      targetRevision: "0.14.4"
+      chart: metallb
+    - path: manifests/metallb
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   project: default
   ignoreDifferences:
     - group: "apiextensions.k8s.io"
