--- a/argocd/cert-manager.yaml
+++ b/argocd/cert-manager.yaml
@@ -9,19 +9,22 @@ spec:
   destination:
     namespace: cert-manager
     server: "https://kubernetes.default.svc"
-  source:
-    repoURL: "https://charts.jetstack.io"
-    targetRevision: "v1.14.4"
-    chart: cert-manager
-    helm:
-      valuesObject:
-        installCRDs: true
-        podDnsConfig:
-          nameservers:
-            - "1.1.1.1"
-            - "8.8.8.8"
-        dns01RecursiveNameserversOnly: true
-        dns01RecursiveNameservers: "8.8.8.8:53,1.1.1.1:53"
+  sources:
+    - repoURL: "https://charts.jetstack.io"
+      targetRevision: "v1.14.4"
+      chart: cert-manager
+      helm:
+        valuesObject:
+          installCRDs: true
+          podDnsConfig:
+            nameservers:
+              - "1.1.1.1"
+              - "8.8.8.8"
+          dns01RecursiveNameserversOnly: true
+          dns01RecursiveNameservers: "8.8.8.8:53,1.1.1.1:53"
+    - path: manifests/cert-manager
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   project: default
   syncPolicy:
     automated:
