Update Argo CD configuration to ignore status field diffing in specified resource types
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -21,6 +21,10 @@ spec:
           params:
             server:
               insecure: true
+          cm:
+            resource.compareoptions: |
+              # disables status field diffing in specified resource types
+              ignoreAggregatedRoles: true
         server:
           # extensions:
           #   enabled: true
