Update Argo CD configuration to enable extensions and include extension-trivy
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -26,15 +26,17 @@ spec:
               # disables status field diffing in specified resource types
               ignoreAggregatedRoles: true
         server:
-          # extensions:
-          #   enabled: true
-          #   extensionList:
-          #     - name: extension-trivy
-          #       env:
-          #         - name: EXTENSION_URL
-          #           value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy.tar
-          #         - name: EXTENSION_CHECKSUM_URL
-          #           value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy_checksums.txt
+          extensions:
+            enabled: true
+            image:
+              tag: v0.0.4
+            extensionList:
+              - name: extension-trivy
+                env:
+                  - name: EXTENSION_URL
+                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy.tar
+                  - name: EXTENSION_CHECKSUM_URL
+                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.1.0/extension-trivy_checksums.txt
           ingress:
             enabled: true
             hosts:
