--- a/argocd/vm-stack.yaml
+++ b/argocd/vm-stack.yaml
@@ -10,9 +10,9 @@ spec:
     server: "https://kubernetes.default.svc"
   project: default
   source:
-    path: victoria-metrics-k8s-stack
+    chart: victoria-metrics-k8s-stack
     repoURL: "https://victoriametrics.github.io/helm-charts/"
-    targetRevision: 0.20.0
+    targetRevision: "0.20.0"
     helm:
       valuesObject:
         ingress:
