--- a/argocd/vm-stack.yaml
+++ b/argocd/vm-stack.yaml
@@ -1,4 +1,3 @@
-# victoria-metrics-k8s-stack
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -37,3 +36,4 @@ spec:
     automated: {}
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
