Update syncPolicy in vm-stack.yaml to enable automated pruning and self-healing
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/vm-stack.yaml
+++ b/argocd/vm-stack.yaml
@@ -30,7 +30,9 @@ spec:
         grafana:
           enabled: false
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
