--- a/argocd/vm-stack.yaml
+++ b/argocd/vm-stack.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: victoria-metrics-k8s-stack
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: default
