Update Argo CD and Grafana configurations
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/grafana.yaml
+++ b/argocd/grafana.yaml
@@ -27,6 +27,7 @@ spec:
             - grafana.k8s.home.lex.la
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+            cert-manager.io/cluster-issuer: cloudflare-issuer
           tls:
             - secretName: grafana-tls
               hosts:
