Update Argo CD TLS secret name in argocd.yaml
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -42,7 +42,7 @@ spec:
               traefik.ingress.kubernetes.io/router.entrypoints: websecure,tunnel
               cert-manager.io/cluster-issuer: cloudflare-issuer
             tls:
-              - secretName: argocd-k8s-home-lex-la-tls
+              - secretName: argocd-lex-la-tls
                 hosts:
                   - argocd.lex.la
   project: default
