Update Argo CD logging level to debug in argocd.yaml
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -17,6 +17,8 @@ spec:
       valuesObject:
         global:
           domain: argocd.lex.la
+          logging:
+            level: debug
         configs:
           params:
             server:
