--- a/argocd/grafana.yaml
+++ b/argocd/grafana.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: "7.3.8"
     chart: grafana
     helm:
-      value: |
+      values: |
         persistence:
           enabled: true
           type: pvc
