Update Argo CD persistence configuration in grafana.yaml
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/grafana.yaml
+++ b/argocd/grafana.yaml
@@ -15,6 +15,9 @@ spec:
     chart: grafana
     helm:
       values: |
+        global:
+          deploymentStrategy:
+            type: Recreate
         persistence:
           enabled: true
           type: pvc
