Update Argo CD values in argocd.yaml
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/argocd.yaml
+++ b/argocd/argocd.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: "6.7.12"
     chart: argo-cd
     helm:
-      valuesObject:
+      values: |
         global:
           domain: argocd.lex.la
           logging:
