Update project name in me-site.yaml to workloads
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/me-site.yaml
+++ b/argocd/me-site.yaml
@@ -29,7 +29,7 @@ spec:
                       name: me-site
                       port:
                         number: 8080
-  project: default
+  project: workloads
   syncPolicy:
     automated:
       prune: true
