Add recursive directory option to argocd/meta.yaml
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/meta.yaml
+++ b/argocd/meta.yaml
@@ -12,6 +12,8 @@ spec:
     path: argocd
     repoURL: https://github.com/lexfrei/k8s.git
     targetRevision: HEAD
+    directory:
+      recurse: true
   syncPolicy:
     automated:
       selfHeal: true
