--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -1,27 +1,27 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metrics-server
+  name: victoria-metrics-k8s-stack
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
+  project: monitoring
   destination:
-    namespace: kube-system
+    namespace: monitoring
     server: "https://kubernetes.default.svc"
   source:
-    repoURL: "https://kubernetes-sigs.github.io/metrics-server"
-    targetRevision: "3.12.1"
-    chart: metrics-server
+    repoURL: "https://victoriametrics.github.io/helm-charts/"
+    targetRevision: "0.21.1"
+    chart: victoria-metrics-k8s-stack
     helm:
       valuesObject:
-        args:
-          - --kubelet-insecure-tls
-          - --kubelet-preferred-address-types=InternalIP
-  project: default
+        grafana:
+          enabled: false
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
