--- a/argocd/infra/coredns.yaml
+++ b/argocd/infra/coredns.yaml
@@ -6,6 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
+  project: infra
   destination:
     namespace: kube-system
     server: "https://kubernetes.default.svc"
@@ -48,7 +49,6 @@ spec:
               - name: loop
               - name: reload
               - name: loadbalance
-  project: default
   syncPolicy:
     automated:
       prune: true
