Update ArgoCD project configurations and remove unnecessary files
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/infra/argocd.yaml
+++ b/argocd/infra/argocd.yaml
@@ -18,8 +18,6 @@ spec:
       values: |
         global:
           domain: argocd.lex.la
-          logging:
-            level: debug
         configs:
           params:
             server:
@@ -29,20 +27,20 @@ spec:
               # disables status field diffing in specified resource types
               ignoreAggregatedRoles: true
         server:
+          extensions:
+            enabled: true
+            extensionList:
+              - name: extension-trivy
+                env:
+                  - name: EXTENSION_URL
+                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.2.0/extension-trivy.tar
+                  - name: EXTENSION_CHECKSUM_URL
+                    value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.2.0/extension-trivy_checksums.txt
           ingress:
             enabled: true
-            hosts:
-              - host: argocd.lex.la
-                paths:
-                  - path: /
-                    pathType: Prefix
-                    backend:
-                      service:
-                        name: argocd-server
-                        port:
-                          number: 80
+            hostname: argocd.lex.la
             annotations:
-              traefik.ingress.kubernetes.io/router.entrypoints: websecure,tunnel
+              traefik.ingress.kubernetes.io/router.entrypoints: tunnel
               cert-manager.io/cluster-issuer: cloudflare-issuer
             tls:
               - secretName: argocd-lex-la-tls
