--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -18,6 +18,8 @@ spec:
       valuesObject:
         grafana:
           enabled: false
+        prometheus-node-exporter:
+          enabled: false
   syncPolicy:
     automated:
       prune: true
