--- a/argocd/monitoring/node-exporter.yaml
+++ b/argocd/monitoring/node-exporter.yaml
@@ -6,6 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
+  project: monitoring
   destination:
     namespace: monitoring
     server: "https://kubernetes.default.svc"
@@ -48,7 +49,6 @@ spec:
           limits:
             cpu: 200m
             memory: 200Mi
-  project: default
   syncPolicy:
     automated:
       prune: true
