Update ArgoCD monitoring configuration to disable node-exporter and prometheus-node-exporter
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -18,6 +18,8 @@ spec:
       valuesObject:
         grafana:
           enabled: false
+        node-exporter:
+          enabled: false
   syncPolicy:
     automated:
       prune: true
