Update ArgoCD monitoring configuration to disable node-exporter and prometheus-node-exporter
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -18,7 +18,7 @@ spec:
       valuesObject:
         grafana:
           enabled: false
-        node-exporter:
+        prometheus-node-exporter:
           enabled: false
         vmsingle:
           ingress:
