Update ArgoCD monitoring configuration to enable prometheus-node-exporter
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -18,8 +18,8 @@ spec:
       valuesObject:
         grafana:
           enabled: false
-        pprometheus-node-exporter:
-          enabled: false
+        prometheus-node-exporter:
+          enabled: true
         vmsingle:
           ingress:
             enabled: true
