Update ArgoCD monitoring configuration to remove unnecessary host path and enable vmsingle ingress with TLS
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -27,10 +27,7 @@ spec:
               traefik.ingress.kubernetes.io/router.entrypoints: websecure
               cert-manager.io/cluster-issuer: cloudflare-issuer
             hosts:
-              - host: "vm.k8s.home.lex.la"
-                paths:
-                  - path: /
-                    pathType: Prefix
+              - "vm.k8s.home.lex.la"
             tls:
               - secretName: vm-tls
                 hosts:
