Update ArgoCD monitoring configuration to disable prometheus-node-exporter
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -19,7 +19,7 @@ spec:
         grafana:
           enabled: false
         prometheus-node-exporter:
-          enabled: true
+          enabled: false
         vmsingle:
           ingress:
             enabled: true
