--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -21,7 +21,7 @@ spec:
           tunnelName: k8s-expose
           ingress:
             - hostname: k8s.lex.la
-              service: https://kubernetes.default.svc
+              service: https://172.16.2.101:6443
             - service: http://traefik.traefik-system.svc.k8s.home.lex.la:8080
           enableDefault404: false
         replicaCount: 1
