--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -21,7 +21,9 @@ spec:
           tunnelName: k8s-expose
           ingress:
             - hostname: k8s.lex.la
-              service: https://172.16.2.101:6443
+              service: tcp://172.16.2.101:6443
+              originRequest:
+                proxyType: socks
             - service: http://traefik.traefik-system.svc.k8s.home.lex.la:8080
           enableDefault404: false
         replicaCount: 1
