--- a/argocd/infra/trivy-operator.yaml
+++ b/argocd/infra/trivy-operator.yaml
@@ -11,6 +11,10 @@ spec:
     chart: trivy-operator
     repoURL: https://aquasecurity.github.io/helm-charts/
     targetRevision: 0.21.4
+    helm:
+      values: |
+        operator:
+          scanJobsConcurrentLimit: 2
   destination:
     server: https://kubernetes.default.svc
     namespace: trivy-system
