--- a/argocd/infra/traefik.yaml
+++ b/argocd/infra/traefik.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: "27.0.2"
     chart: traefik
     helm:
-      valuesObject:
+      values: |
         service:
           annotations:
             traefik.universe.tf/address-pool: ingress-pool
