--- a/argocd/meta/meta.yaml
+++ b/argocd/meta/meta.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
-  project: default
+  project: meta
   source:
     path: argocd
     repoURL: https://github.com/lexfrei/k8s.git
