--- a/argocd/infra/coredns.yaml
+++ b/argocd/infra/coredns.yaml
@@ -10,45 +10,16 @@ spec:
   destination:
     namespace: kube-system
     server: "https://kubernetes.default.svc"
-  source:
-    repoURL: "https://coredns.github.io/helm"
-    targetRevision: "1.29.0"
-    chart: coredns
-    helm:
-      valuesObject:
-        rbac:
-          create: true
-        service:
-          clusterIP: 10.43.0.10
-        servers:
-          - zones:
-              - zone: .
-            port: 53
-            plugins:
-              - name: errors
-              # Serves a /health endpoint on :8080, required for livenessProbe
-              - name: health
-                configBlock: |-
-                  lameduck 5s
-              # Serves a /ready endpoint on :8181, required for readinessProbe
-              - name: ready
-              # Required to query kubernetes API for data
-              - name: kubernetes
-                parameters: k8s.home.lex.la in-addr.arpa ip6.arpa
-                configBlock: |-
-                  pods insecure
-                  fallthrough in-addr.arpa ip6.arpa
-                  ttl 30
-              # Serves a /metrics endpoint on :9153, required for serviceMonitor
-              - name: prometheus
-                parameters: 0.0.0.0:9153
-              - name: forward
-                parameters: . /etc/resolv.conf
-              - name: cache
-                parameters: 30
-              - name: loop
-              - name: reload
-              - name: loadbalance
+  sources:
+    - repoURL: "https://coredns.github.io/helm"
+      targetRevision: "1.29.0"
+      chart: coredns
+      helm:
+        valueFiles:
+          - $values/values/coredns.yaml
+    - repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
+      ref: values
   syncPolicy:
     automated:
       prune: true
