--- a/values/tigera-operator.yaml
+++ b/values/tigera-operator.yaml
@@ -1,7 +1,10 @@
 installation:
   calicoNetwork:
     ipPools:
-      - cidr: "10.42.0.0/16"
-        natOutgoing: "Enabled"
-        encapsulation: "VXLAN"
+      - blockSize: 26
+        cidr: 10.42.0.0/16
+        disableBGPExport: false
+        encapsulation: VXLAN
+        natOutgoing: Enabled
+        nodeSelector: all()
     containerIPForwarding: "Enabled"
