--- a/argocd/infra/tor-controller.yaml
+++ b/argocd/infra/tor-controller.yaml
@@ -14,6 +14,9 @@ spec:
     repoURL: "https://bugfest.github.io/tor-controller"
     targetRevision: "0.1.15"
     chart: tor-controller
+    helm:
+      values: |
+        upgradeRollout: false
   syncPolicy:
     automated:
       prune: true
