--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -20,6 +20,8 @@ spec:
           secretName: tunnel-credentials
           tunnelName: k8s-expose
           ingress:
+            - hostname: nas.lex.la
+              service: http://nas.home.lex.la:80
             - service: http://traefik.traefik-system.svc.k8s.home.lex.la:8080
           enableDefault404: false
         replicaCount: 1
