--- a/argocd/monitoring/node-exporter.yaml
+++ b/argocd/monitoring/node-exporter.yaml
@@ -10,45 +10,48 @@ spec:
   destination:
     namespace: monitoring
     server: "https://kubernetes.default.svc"
-  source:
-    repoURL: "https://prometheus-community.github.io/helm-charts"
-    targetRevision: "4.32.0"
-    chart: prometheus-node-exporter
-    helm:
-      valuesObject:
-        serviceMonitor:
-          enabled: true
-          namespace: monitoring
-          interval: 30s
-          selector:
-            matchLabels:
-              app: node-exporter
-        service:
-          type: ClusterIP
-          port: 9100
-        rbac:
-          create: true
-        nodeSelector:
-          kubernetes.io/os: linux
-        tolerations:
-          - key: node-role.kubernetes.io/master
-            effect: NoSchedule
-        affinity:
-          nodeAffinity:
-            requiredDuringSchedulingIgnoredDuringExecution:
-              nodeSelectorTerms:
-                - matchExpressions:
-                    - key: kubernetes.io/os
-                      operator: In
-                      values:
-                        - linux
-        resources:
-          requests:
-            cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 200m
-            memory: 200Mi
+  sources:
+    - repoURL: "https://prometheus-community.github.io/helm-charts"
+      targetRevision: "4.32.0"
+      chart: prometheus-node-exporter
+      helm:
+        valuesObject:
+          serviceMonitor:
+            enabled: true
+            namespace: monitoring
+            interval: 30s
+            selector:
+              matchLabels:
+                app: node-exporter
+          service:
+            type: ClusterIP
+            port: 9100
+          rbac:
+            create: true
+          nodeSelector:
+            kubernetes.io/os: linux
+          tolerations:
+            - key: node-role.kubernetes.io/master
+              effect: NoSchedule
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: kubernetes.io/os
+                        operator: In
+                        values:
+                          - linux
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+            limits:
+              cpu: 200m
+              memory: 200Mi
+    - path: manifests/node-exporter
+      repoURL: https://github.com/lexfrei/k8s.git
+      targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
