--- a/argocd/monitoring/trivy-operator.yaml
+++ b/argocd/monitoring/trivy-operator.yaml
@@ -15,6 +15,8 @@ spec:
       values: |
         operator:
           scanJobsConcurrentLimit: 2
+        serviceMonitor:
+          enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: trivy-system
