chore: Update vertical-pod-autoscaler chart to version 9.8.1
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/argocd/infra/vertical-pod-autoscaler.yaml
+++ b/argocd/infra/vertical-pod-autoscaler.yaml
@@ -13,6 +13,7 @@ spec:
   source:
     repoURL: "https://cowboysysop.github.io/charts/"
     targetRevision: "9.8.1"
+    chart: vertical-pod-autoscaler
   syncPolicy:
     automated:
       prune: true
