--- a/argocd/infra/vertical-pod-autoscaler.yaml
+++ b/argocd/infra/vertical-pod-autoscaler.yaml
@@ -14,6 +14,10 @@ spec:
     repoURL: "https://cowboysysop.github.io/charts/"
     targetRevision: "9.8.1"
     chart: vertical-pod-autoscaler
+    valuesObject:
+      updater:
+        extraArgs:
+          min-replicas: 1
   syncPolicy:
     automated:
       prune: true
