chore: Add trivy extension to for ArgoCD
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -18,3 +18,12 @@ server:
       - secretName: argocd-lex-la-tls
         hosts:
           - argocd.lex.la
+  extensions:
+    enabled: true
+    extensionList:
+      - name: extension-trivy
+        env:
+          - name: EXTENSION_URL
+            value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.2.0/extension-trivy.tar
+          - name: EXTENSION_CHECKSUM_URL
+            value: https://github.com/mziyabo/argocd-trivy-extension/releases/download/v0.2.0/extension-trivy_checksums.txt
