--- a/argocd/monitoring/trivy-operator.yaml
+++ b/argocd/monitoring/trivy-operator.yaml
@@ -12,7 +12,7 @@ spec:
     repoURL: https://aquasecurity.github.io/helm-charts/
     targetRevision: 0.22.0
     helm:
-      values: |
+      valuesObject:
         operator:
           scanJobsConcurrentLimit: 2
         serviceMonitor:
