--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -5,6 +5,8 @@ configs:
     server:
       insecure: true
   cm:
+    accounts.admin: apiKey, login
+    application.resourceTrackingMethod: annotation
     resource.compareoptions: |
       ignoreAggregatedRoles: true
     resource.exclusions: |
@@ -12,7 +14,6 @@ configs:
         - "*"
         kinds:
         - ProviderConfigUsage
-    application.resourceTrackingMethod: annotation
     resource.customizations: |
       "*.upbound.io/*":
         health.lua: |
