--- a/argocd/infra/metallb.yaml
+++ b/argocd/infra/metallb.yaml
@@ -28,6 +28,21 @@ spec:
       name: addresspools.metallb.io
       jsonPointers:
         - /spec/conversion/webhook/clientConfig/caBundle
+    - group: "admissionregistration.k8s.io/v1"
+      kind: ValidatingWebhookConfiguration
+      name: metallb-webhook-configuration
+      jsonPointers:
+        - /webhooks/admissionReviewVersions/4/clientConfig/caBundle
+    - group: "admissionregistration.k8s.io/v1"
+      kind: ValidatingWebhookConfiguration
+      name: metallb-webhook-configuration
+      jsonPointers:
+        - /webhooks/admissionReviewVersions/5/clientConfig/caBundle
+    - group: "apps/v1"
+      kind: Deployment
+      name: metallb-controller
+      jsonPointers:
+        - /spec/template/spec/containers/0/resources
   syncPolicy:
     automated:
       prune: true
