--- a/argocd/infra/metallb.yaml
+++ b/argocd/infra/metallb.yaml
@@ -28,16 +28,10 @@ spec:
       name: addresspools.metallb.io
       jsonPointers:
         - /spec/conversion/webhook/clientConfig/caBundle
-    - group: "admissionregistration.k8s.io/v1"
-      kind: ValidatingWebhookConfiguration
-      name: metallb-webhook-configuration
-      jsonPointers:
-        - /webhooks/admissionReviewVersions/4/clientConfig/caBundle
-    - group: "admissionregistration.k8s.io/v1"
-      kind: ValidatingWebhookConfiguration
-      name: metallb-webhook-configuration
-      jsonPointers:
-        - /webhooks/admissionReviewVersions/5/clientConfig/caBundle
+    - group: "admissionregistration.k8s.io"
+      kind: "ValidatingWebhookConfiguration"
+      jqPathExpressions:
+        - ".webhooks[]?.clientConfig.caBundle"
     - group: "apps/v1"
       kind: Deployment
       name: metallb-controller
