chore: Update metallb.yaml with additional webhook configurations and deployment resources
Signed-off-by: Aleksei Sviridkin <aleksei.sviridkin@ringcentral.com>

--- a/argocd/infra/metallb.yaml
+++ b/argocd/infra/metallb.yaml
@@ -34,9 +34,8 @@ spec:
         - ".webhooks[]?.clientConfig.caBundle"
     - group: "apps/v1"
       kind: Deployment
-      name: metallb-controller
-      jsonPointers:
-        - /spec/template/spec/containers/0/resources
+      jqPathExpressions:
+        - .spec.template.spec.containers[]?.resources
   syncPolicy:
     automated:
       prune: true
