--- a/argocd/infra/metallb.yaml
+++ b/argocd/infra/metallb.yaml
@@ -35,7 +35,7 @@ spec:
     - group: "apps/v1"
       kind: Deployment
       jqPathExpressions:
-        - .spec.template.spec.containers[]?.resources
+        - ".spec.template.spec.containers[]?.resources"
   syncPolicy:
     automated:
       prune: true
